apps/resume/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume
  namespace: resume
spec:
  selector:
    app: resume
  ports:
    - port: 80
      targetPort: http
      name: http
