apps/resume/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume
  namespace: resume
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
    - hosts:
        - resume.alucard.dev
      secretName: resume-tls
  rules:
    - host: resume.alucard.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume
                port:
                  number: 80
